cmake_minimum_required (VERSION 2.6)
project (Tutorial)

add_executable(main main.cpp)
add_executable(arrays part-1/arrays.cpp)
add_executable(casting part-1/casting.cpp)
add_executable(classes part-1/classes.cpp)
add_executable(conditionals part-1/conditionals.cpp)
add_executable(enums part-1/enums.cpp)
add_executable(exceptions part-1/exceptions.cpp)
add_executable(functions part-1/functions.cpp)
add_executable(helloworld part-1/helloworld.cpp)
add_executable(loops part-1/loops.cpp)
add_executable(memory-allocation part-1/memory-allocation.cpp)
add_executable(operators part-1/operators.cpp)
add_executable(pointers part-1/pointers.cpp)
add_executable(smart-pointers part-1/smart-pointers.cpp)
add_executable(structs part-1/structs.cpp)
add_executable(type-inference part-1/type-inference.cpp)
add_executable(vector part-1/vector.cpp)
add_executable(program part-1/main.cpp part-1/deps/Employee.cpp part-1/deps/Database.cpp)