cmake_minimum_required (VERSION 2.6)
project (Tutorial)

add_executable(part-1-arrays part-1/arrays.cpp)
add_executable(part-1-casting part-1/casting.cpp)
add_executable(part-1-classes part-1/classes.cpp)
add_executable(part-1-conditionals part-1/conditionals.cpp)
add_executable(part-1-enums part-1/enums.cpp)
add_executable(part-1-exceptions part-1/exceptions.cpp)
add_executable(part-1-functions part-1/functions.cpp)
add_executable(part-1-helloworld part-1/helloworld.cpp)
add_executable(part-1-loops part-1/loops.cpp)
add_executable(part-1-memory-allocation part-1/memory-allocation.cpp)
add_executable(part-1-operators part-1/operators.cpp)
add_executable(part-1-pointers part-1/pointers.cpp)
add_executable(part-1-smart-pointers part-1/smart-pointers.cpp)
add_executable(part-1-structs part-1/structs.cpp)
add_executable(part-1-type-inference part-1/type-inference.cpp)
add_executable(part-1-vector part-1/vector.cpp)
add_executable(part-1-program part-1/main.cpp part-1/deps/Employee.cpp part-1/deps/Database.cpp)